--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,18 @@
 }
 
 body {
-    /*height: 100%;*/
+    height: 100%;
     width: 100%;
     background-color: #191918;
     color: rgb(203,173,98);
-    font-size: 1rem;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
     text-rendering: optimizeSpeed;
     text-align: center;
 }
+
 .page {
     background: url("../img/backgroundHall1.jpeg") 0 0 / cover no-repeat;
-    /*display: grid;*/
     margin-bottom: 2rem;
 }
 
@@ -40,6 +40,9 @@ body {
     display: grid;
 }
 
+.wrapper {
+  margin: 0 4vw;
+}
 
 .header {
     height: 2em;
@@ -144,9 +147,9 @@ h2 {
 
 .lunch__weight {
     opacity: 50%;
-    font-size: 10px;
+    font-size: 0.7rem;
     color: #fffdfc;
-    margin: -1vh 0 0.5vh 0;
+    margin: -0.4vh 0 0.5vh 0;
 }
 
 .open__header:before, .open__header:after,
@@ -199,22 +202,6 @@ h2 {
     font-size: 1.6rem;
 }
 
-/*.about__header:before {*/
-/*    margin-left: -100%;*/
-/*    left: -1vw;*/
-/*    width: 31.3vw;*/
-/*}*/
-
-/*.about__header:after {*/
-/*    margin-right: -100%;*/
-/*    right: -1vw;*/
-/*    width: 31.3vw;*/
-/*}*/
-
-/*.about__desc, .reservation__desc {*/
-/*    margin: 0 14vw*/
-/*}*/
-
 .reservation__header:before {
     left: -1vw;
     width: 21vw;
@@ -233,6 +220,7 @@ h2 {
     background-color: #cbad62;
     color: #191918;
     font-size: 1.5rem;
+    margin-top: 3vh;
 }
 
 .footer__logo {
